--- a/11-Todo-List.html
+++ b/11-Todo-List.html
@@ -20,10 +20,9 @@
     <div class="js-todo-List todo-grid"></div>
 
     <footer>
-        <p>&copy; 2023 Rahiim. All rights reserved.</p>
-      </footer>
+        <p>&copy; Rahiim 2023. All rights reserved.</p>
+    </footer>
 
-    <script src="11-Todo-List.js"></script>
-    
+    <script src="11-Todo-List.js"></script> 
 </body>
 </html>
